test/integration/bad/tuples/bad_addition.stan
model {
  tuple(real, real) z;
  z += 1;
}
